# slingshot-solver

./: .gitignore  CHANGELOG.md  README.md  REPORT.md  ThreeBodySolver.ipynb  ThreeBodySolver3.ipynb  ThreeBodySolver_v2.ipynb  TwoBodyScatter.py  config_default.yaml  pyproject.toml  requirements.txt  run.py
KippingCase/: README.md  flyby.py  run_case.py
branches/trajectory_audit_lab/: .gitignore  README.md
branches/trajectory_audit_lab/audits/: README.md
branches/trajectory_audit_lab/notebooks/: TrajectoryGradientsLatest.ipynb
configs/: config_default.yaml  config_interstellar_k432.yaml  config_kepler432_case.yaml  config_pareto.yaml  config_single.yaml  config_weighted.yaml
slingshot/: __init__.py  analysis.py  animation.py  baselines.py  cli.py  compare_runs.py  comparison.py  config.py  console.py  constants.py  dynamics.py  monte_carlo.py  narrowed_baselines.py  pipeline.py  plotting.py  plotting_twobody.py  report.py  sampling.py  twobody.py
slingshot/analysis/: __init__.py  baselines.py  comparison.py  monte_carlo.py  narrowed_baselines.py  robustness.py  tiering.py  trajectory.py  uncertainty.py
slingshot/core/: __init__.py  dynamics.py  sampling.py  twobody.py  twobody_scatter.py
slingshot/output/: __init__.py  animation.py  compare_runs.py  notebook_display.py  plotting.py  plotting_twobody.py  report.py
slingshot_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_analysis.py  test_config.py  test_dynamics.py  test_monte_carlo.py  test_notebook_display.py  test_robustness.py  test_tiering.py  test_twobody_scatter.py  test_uncertainty.py
(+8 files in other folders)
